# init_cpp

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  deepseek  vcpkg.json
c++/: 1-变量.md  2-函数.md  6-指针.md  8-类.md
c++_notes/: 0-随笔.md  3-头文件.md  4-条件与分支.md  5-循环.md  7-引用.md  debug-build后打开.exe报错找不到libssh2.dll.md  debug-选择生成器冲突.md  vcpkg装包.md
include/: cat.h  scp.h
src/: cat.cpp  main.cpp  scp.cpp
src/baseService/: Log.cpp  Map.cpp
